...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:layout_constraintLeft_toRightOf="@+id/Message_sendTo"
        tools:layout_editor_absoluteX="125dp" />

    <Button
        android:id="@+id/Message_sendB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.939" />

    <EditText
        android:id="@+id/Message_text"
        android:layout_width="319dp"
        android:layout_height="216dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textSize="20sp"
...
